Fix window resize issue and add default layout
- Fix GL surface not resizing when window is resized
- Handle DPI scale changes when moving between displays
- Add default_layout.ini for consistent initial window setup
- Bump version to 0.1.17

Made-with: Cursor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "shit"
-version = "0.1.16"
+version = "0.1.17"
 edition = "2021"
 description = "Signal Harvesting & Interpretation Toolkit"
+include = ["src/**/*", "Cargo.toml", "Cargo.lock", "default_layout.ini"]
 
 [dependencies]
 # imgui and backends
