--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shit"
-version = "0.1.17"
+version = "0.1.21"
 edition = "2021"
 description = "Signal Harvesting & Interpretation Toolkit"
 include = ["src/**/*", "Cargo.toml", "Cargo.lock", "default_layout.ini"]
@@ -38,7 +38,7 @@ thiserror = "2.0"
 # utilities
 chrono = { version = "0.4", features = ["serde"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dirs = "5.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
